# Best-Driver-Drowsiness-Detection-System_python

./: README.md  app.py  camera_simulator.py  drowsiness_detector.py  pyproject.toml  utils.py
